--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../dist/style.css" rel="stylesheet">
-  <title> Ibtissem's Portfolio </title>
+  <link rel="shortcut icon" href="../pictures/logo.png">
+  <title> IBTISSEM HAMANI's Portfolio </title>
 </head>
 <body>
 
   <nav class=" dark:bg-gray-900 fixed w-full z-40 border-gray-200 dark:border-gray-600 bg-white top-full">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2 top-0">
       <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo">
-          <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">IH Portfolio</span>
+          <img src="../pictures/logo.png" class="w-6" alt="IH Logo">
+          <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Portfolio</span>
       </a>
       <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
           <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
